# pystarter

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.sh
requirements/: dev.txt
