[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Vishal Mishra",email = "vishal.k.mishra2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.0"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
